test/FAIL/disasmcmd/memory_match/02_test_disasm.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="doesn't match the memory of .text segment"
#-------

load boucle.o
disasm 0x20+3
